--- a/app/package.json
+++ b/app/package.json
@@ -18,10 +18,10 @@
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "~1.0.0-alpha.23",
     "react-native-web": "^0.11.7",
+    "react-native-week-view": "0.0.9",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^2.5.6",
-    "redux": "^4.0.4"
+    "react-navigation-tabs": "^2.5.6"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
