--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "expo": "^35.0.0",
     "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
@@ -17,6 +18,8 @@
     "react-native-paper": "^3.2.1",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "~1.0.0-alpha.23",
+    "react-native-svg": "^9.13.3",
+    "react-native-svg-charts": "^5.3.0",
     "react-native-web": "^0.11.7",
     "react-native-week-view": "0.0.9",
     "react-navigation": "^4.0.10",
