--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-chart-kit": "^3.13.0",
+    "react-native-emoji": "^1.8.0",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-paper": "^3.2.1",
     "react-native-reanimated": "~1.2.0",
