--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^2.1.0",
     "expo": "^35.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
@@ -18,6 +19,7 @@
     "react-native-chart-kit": "^3.13.0",
     "react-native-emoji": "^1.8.0",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^3.2.1",
     "react-native-reanimated": "~1.2.0",
     "react-native-screens": "~1.0.0-alpha.23",
