--- a/app/package.json
+++ b/app/package.json
@@ -8,22 +8,22 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^2.1.0",
-    "expo": "^35.0.0",
+    "@react-native-community/datetimepicker": "2.1.0",
+    "expo": "^36.0.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
     "react-native-chart-kit": "^3.13.0",
     "react-native-emoji": "^1.8.0",
-    "react-native-gesture-handler": "~1.3.0",
+    "react-native-gesture-handler": "~1.5.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^3.2.1",
-    "react-native-reanimated": "~1.2.0",
-    "react-native-screens": "~1.0.0-alpha.23",
-    "react-native-svg": "^9.13.3",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-svg": "9.13.3",
     "react-native-web": "^0.11.7",
     "react-native-week-view": "0.0.9",
     "react-navigation": "^4.0.10",
@@ -31,7 +31,7 @@
     "react-navigation-tabs": "^2.5.6"
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.1.0"
+    "babel-preset-expo": "^8.0.0"
   },
   "private": true
 }
