--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "react-native-paper": "^3.2.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-svg": "9.13.3",
     "react-native-web": "^0.11.7",
     "react-native-week-view": "0.0.9",
