--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-svg": "9.13.3",
+    "react-native-swiper": "^1.5.14",
     "react-native-web": "^0.11.7",
     "react-native-week-view": "0.0.9",
     "react-navigation": "^4.0.10",
