--- a/app/package.json
+++ b/app/package.json
@@ -33,7 +33,7 @@
     "react-navigation-tabs": "^2.5.6"
   },
   "devDependencies": {
-    "babel-preset-expo": "^8.0.0"
+    "babel-preset-expo": "8.0.0"
   },
   "private": true
 }
